Remove account button fully functional. More input checking.